fix: style cards on small size

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -155,7 +155,7 @@
   
   @media (max-width: 599px) {
     width: 43vw;
-    max-width: 155px;
+    max-width: 140px;
     padding: 7px;
     
     &_create-new {
